fixed alignment for 17 inch and gave final touch

--- a/src/components/HomeCard/Card.css
+++ b/src/components/HomeCard/Card.css
@@ -25,7 +25,19 @@
   font-size: 40px;
 }
 
-@media screen and (max-width: 867px) {
+/* @media screen and (max-width: 867px) { */
+  @media screen and (min-width: 1600px) and (max-width: 2000px) {
+      .card {
+        height: 580px;
+        width: 510px;
+      }
+            .cardImg img {
+              width: 100%;
+        height: 480px;
+            }
+      
+    }
+@media screen and (max-width: 1315px) {
   .card {
     width: 400px;
     margin: auto;
