--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -40,7 +40,24 @@
   /* margin-top: 10px; */
 }
 
-@media screen and (max-width: 867px) {
+/* @media screen and (max-width: 1315px) {
+  .productCard {
+      width: 400px;
+      height: 300px;
+       margin: auto; 
+    }
+} */
+@media screen and (min-width: 1600px) and (max-width: 2000px) {
+  .productCard {
+    height: 580px;
+      /* width: 510px; */
+  }
+.productCardBody .productCardText {
+  font-size: 24px;
+}
+}
+/* @media screen and (max-width: 867px) { */
+@media screen and (max-width: 1315px) {
   .productCard {
     width: 400px;
     height: 300px;
@@ -54,7 +71,7 @@
     height: 330px;
   }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 376px) {
   .productCard {
     height: 360px;
   }
@@ -64,4 +81,17 @@
     width: 98vw;
     height: 380px;
   }
+}
+
+@media screen and (min-width: 1945px) {
+.productCard {
+  height: 90%;
+}
+.productCardBody .productCardTitle {
+  font-size: 48px;
+}
+.productCardBody .productCardText {
+  font-size: 24px;
+}
+
 }
